[gd_scene load_steps=26 format=2]

[ext_resource path="res://recursos/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://juego/personaje/PersonajePpal.gd" type="Script" id=2]
[ext_resource path="res://recursos/Players/bunny2_jump.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny2_walk2.png" type="Texture" id=4]
[ext_resource path="res://recursos/Players/bunny2_walk1.png" type="Texture" id=5]
[ext_resource path="res://recursos/Sfx/Jump 5.wav" type="AudioStream" id=6]
[ext_resource path="res://recursos/Items/wing_left.png" type="Texture" id=7]
[ext_resource path="res://recursos/Items/wing_right.png" type="Texture" id=8]
[ext_resource path="res://juego/objetos/Proyectil.tscn" type="PackedScene" id=9]
[ext_resource path="res://recursos/Sfx/shoot 15.wav" type="AudioStream" id=10]
[ext_resource path="res://recursos/Particles/smoke.png" type="Texture" id=11]
[ext_resource path="res://recursos/Players/bunny1_walk1.png" type="Texture" id=12]
[ext_resource path="res://recursos/Players/bunny1_jump.png" type="Texture" id=13]
[ext_resource path="res://recursos/Players/bunny1_stand.png" type="Texture" id=14]
[ext_resource path="res://recursos/Players/bunny1_walk2.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "correr",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 15 ) ],
"loop": true,
"name": "correr",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 42.5487
height = 63.937

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36.9001, 6.24121 )

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "entrar_portal_2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 40.0, 60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, -40.0, -60.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PersonajePpal" type="KinematicBody2D" groups=[
"Players",
]]
scale = Vector2( 0.4, 0.4 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 60
script = ExtResource( 2 )
velocidad = Vector2( 400, 800 )
fuerza_salto = 2500
proyectil = ExtResource( 9 )

[node name="wing_right" type="Sprite" parent="."]
position = Vector2( 37.4787, -125.115 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 8 )
offset = Vector2( 40.017, -15.1321 )

[node name="wing_left" type="Sprite" parent="."]
position = Vector2( -36.7717, -126.784 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 7 )
offset = Vector2( -40.5826, -13.7973 )

[node name="Sprites" type="Node" parent="."]

[node name="AudioSaltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioDisparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 4.757, -475 )
rotation = -0.261799
current = true
limit_left = -1000
limit_bottom = 1000
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.793701, -103.975 )
frames = SubResource( 1 )
frame = 1

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0.793701, -103.975 )
frames = SubResource( 2 )

[node name="CollisionCuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 0.561234, -81.5727 )
shape = SubResource( 3 )

[node name="CollisionPies" type="CollisionShape2D" parent="."]
position = Vector2( 0.471931, -8.84309 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/aclarar = SubResource( 5 )
anims/default = SubResource( 6 )
anims/entrar_portal = SubResource( 7 )
anims/entrar_portal_2 = SubResource( 10 )
anims/oscurecer = SubResource( 8 )
anims/volar = SubResource( 9 )

[node name="EnfriamientoPowerUpSalto" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="EnfriamientoPowerUpVolar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnfriamientoDisparo" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosicionDisparo" type="Position2D" parent="."]
position = Vector2( 0, -90 )

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.3
speed_scale = 1.6
randomness = 0.2
local_coords = false
texture = ExtResource( 11 )
gravity = Vector2( 0, -98 )
angular_velocity = 8.0
linear_accel = 40.0
scale_amount = 0.3
scale_amount_random = 0.25
color = Color( 1, 1, 1, 0.666667 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpSalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="timeout" from="EnfriamientoPowerUpVolar" to="." method="_on_EnfriamientoPowerUpVolar_timeout"]
[connection signal="timeout" from="EnfriamientoDisparo" to="." method="_on_EnfriamientoDisparo_timeout"]
